tests/syntactic/execution_plan/execution_plan.dl
.type S


.decl r(x:S,y:S)

r(a,d) :- r(a,b),r(b,c),r(c,d).

// that's ok
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .strict

// that's ok
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .plan 1: (1,2,3), 2: (3,2,1), 3: (2,3,1)

// also this
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .strict
        .plan 1: (1,2,3), 2: (3,2,1), 3: (2,3,1)

// that's not ok
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .plan (1,2,3), 2: (3,2,1), 3: (2,3,1)
